# presence-timeline

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  hacs.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260708_000001_initial_schema.py  20260708_000002_places_and_safety_links.py  20260708_000003_device_ignore_flag.py  20260711_000004_reverse_geocode_cache.py  20260711_000005_provider_status.py  20260711_000006_location_stays.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: auth.py  config.py  database.py
backend/app/domain/: __init__.py  events.py
backend/app/models/: __init__.py  base.py  family.py  location.py  place.py  trip.py
backend/app/providers/: base.py
backend/app/repositories/: location_repository.py
backend/app/schemas/: home_assistant.py  location.py  member.py  place.py  safety.py  timeline.py  trip.py
backend/app/services/: bootstrap.py  home_assistant_views.py  (+13 more)
backend/tests/: test_app.py  test_auth.py  test_bootstrap.py  test_home_assistant_normalizer.py  test_home_assistant_provider.py  test_home_assistant_routes.py  test_home_assistant_views.py  test_home_assistant_worker.py  test_ingestion_runner.py  test_location_service.py  test_member_routes.py  test_member_views.py  test_models.py  test_place_matching.py  test_place_routes.py  test_place_views.py  test_places.py  test_retention.py  test_reverse_geocode_cache.py  test_safety_derivation.py  test_safety_routes.py  test_stay_derivation.py  test_stops.py  test_trip_derivation.py  test_trip_routes.py  test_trip_views.py
(+105 files in other folders)
