[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpstrack-backend"
version = "0.1.0"
description = "Backend foundation for the GpsTrack family location platform"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.42,<3.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "geoalchemy2>=0.17.1,<1.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.1,<9.0.0",
  "ruff>=0.12.2,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
